--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
             Quão bem você connhece a Formula 1?
         </div>
 
-        <div id="start-btn" class="btn-start" onclick="startQuiz()">COMEÇAR!</div>
+        <div id="start-btn" class="btn-start">COMEÇAR!</div>
 
         <div id="quiz" class="hide">
-            <div class="numquestao"> 1/10 </div>
             <div class="questao" id="q1"> Quem foi o maior piloto de todos os tempos?</div>
             <div class="respostas">
-                <div class="resposta" id="r1">Ayrton Senna</div>
-                <div class="resposta" id="r2">Ayrton Senna</div>
-                <div class="resposta" id="r3">Ayrton Senna</div>
-                <div class="resposta" id="r4">Ayrton Senna</div>
+                <div class="resposta">Ayrton Senna</div>
+                <div class="resposta">Ayrton Senna</div>
+                <div class="resposta">Ayrton Senna</div>
+                <div class="resposta">Ayrton Senna</div>
             </div>
         </div>
     </div>
