--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
         <img src="F1.svg" alt="logo">
     </div>
 
-    <div class="conteudo"><div class="titulo">Quão bem você connhece a Formula 1?</div><div id="start-btn" class="btn-start" >COMEÇAR!</div><div id="quiz" class="hide"><div class="q" id="questao"> Quem foi o maior piloto de todos os tempos?</div><div class="respostas" id="r"><div class="resposta" id="r1"></div><div class="resposta" id="r2"></div><div class="resposta" id="r3"></div><div class="resposta" id="r4"></div></div><div class="next-btn" id="next-bt">Próxima!</div></div></div>
+    <div class="conteudo">
+        <div class="titulo">Quão bem você conhece a Formula 1?</div>
+        <div id="start-btn" class="btn-start" >COMEÇAR!</div>
+        <div id="quiz" class="hide"><div class="q" id="questao"> Quem foi o maior piloto de todos os tempos?</div>
+        <div class="respostas" id="r">
+            <div class="resposta" id="1"></div>
+            <div class="resposta" id="2"></div>
+            <div class="resposta" id="3"></div>
+            <div class="resposta" id="4"></div>
+        </div>
+        <div class="next-btn" id="next-bt">Próxima!</div>
+        <div class="hide" id="end"> Finalizar </div>
+    </div>
+
+    <div class="hide" id="resultado-final" ></div>
 </body>
 </html>
