--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
     </div>
 
     <div class="hide" id="resultado-final" ></div>
+    <div class="hide" id="jogar-novamente" ></div>
 </body>
 </html>
